# ecto_pcl

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.rst  building.html  cells.html  genindex.html  index.html  objects.inv  overview.html  package.xml  params.json  pcl.cpp  rosbuild_lite.cmake  search.html  searchindex.js  setup.py  stack.xml  stack.yaml
.doctrees/: building.doctree  cells.doctree  environment.pickle  index.doctree  overview.doctree
.doctrees/examples/: colorize_clusters.doctree  index.doctree  pcd_viewer.doctree  ros_sample.doctree  tabletop_segmentation.doctree
_sources/: building.txt  overview.txt
_sources/examples/: colorize_clusters.txt  index.txt  ros_sample.txt  tabletop_segmentation.txt
cmake/: CMakeLists.txt  ecto_pclConfig-version.cmake.in  ecto_pclConfig.cmake.in  pcl-search.cmake
doc/: building.rst  cells.rst  conf.py  example_filter.cpp  index.rst  overview.rst
doc/examples/: colorize_clusters.py  pcd_viewer.py  pcd_viewer.rst  ros_sample.py  tabletop_segmentation.py
doc/source/: building.rst  example_filter.cpp  index.rst  overview.rst
doc/source/examples/: colorize_clusters.py  colorize_clusters.rst  index.rst  pass_it_on.py  pass_it_on.rst  pcd_capture.py  pcd_capture.rst  pcd_display.py  pcd_display.rst  pcd_viewer.py  ros_sample.py  ros_sample.rst  tabletop_segmentation.py
examples/: colorize_clusters.html  index.html  pcd_viewer.html  ros_sample.html  tabletop_segmentation.html
include/: DualFilter.hpp  ecto_pcl.hpp  pcl_cell.hpp  pcl_cell_dual_inputs.hpp  pcl_cell_with_normals.hpp  pcl_dual_cell.hpp
include/ecto_pcl/: ecto_pcl.hpp  pcl_cell.hpp  pcl_cell_dual_inputs.hpp  pcl_cell_with_normals.hpp
samples/: CMakeLists.txt  clusterer.py  colorize_clusters.py  openni_viewer.py  pcd_rw.py  pcd_viewer.py  readme.rst  ros_sample.py  tabletop_segmentation.py  viewer.py
samples/cpp/: example_filter.cpp
samples/ros/: colorize_clusters.py  largest_cluster.py  merge_clouds.py  pass_it_on.py  passthrough.py  pcd_capture.py  pcd_rw.py  pcd_writer.py  tabletop_segmentation.py  viewer.py  voxel_grid.py
samples/standalone/: kinect_view.py  pcd_display.py  pcd_writer.py
scripts/: kinect_view.py  kinect_view_xyz.py  pass_thru.py  pcd_writer.py  ros_tabletop.py  ros_view.py  show_modeltypes.py  tabletop_segmentation.py  voxel_grid.py
src/: CMakeLists.txt  CloudViewer.cpp  ExtractIndices.cpp  FilterCell.hpp  KinectGrabber.cpp  NormalEstimation.cpp  PassThrough.cpp  ProjectInliers.cpp  VoxelGrid.cpp  ecto_pcl.cpp  ecto_pcl.hpp  ecto_pcl_prelude.hpp
src/features/: FPFHEstimation.cpp  Feature.hpp  FeatureEstimator.hpp  NormalEstimation.cpp  PFHEstimation.cpp  VFHEstimation.cpp
src/filters/: Cropper.cpp  ExtractIndices.cpp  Filter.hpp  PassThrough.cpp  PassThroughIndices.cpp  ProjectInliers.cpp  RadiusOutlier.cpp  StatisticalOutlier.cpp  VoxelGrid.cpp
src/io/: CloudViewer.cpp  KinectGrabber.cpp  KinectGrabber.h  MergeClouds.cpp  ModelCoefficients.cpp  NiConverters.cpp  PCDReader.cpp  PCDWriter.cpp  PLYWriter.cpp
src/ros/: CMakeLists.txt  module.cpp  pcl_bridge.cpp
src/segmentation/: ColorizeClusters.cpp  EuclideanClusterExtraction.cpp  ExtractLargestCluster.cpp  ExtractPolygonalPrismData.cpp  SACSegmentation.cpp  SACSegmentationFromNormals.cpp  Segmentation.hpp
src/stuff/: test.cpp
src/surface/: ConvexHull.cpp  MovingLeastSquares.cpp
test/: CMakeLists.txt  pcl_cloud_wr.cpp  pcl_node.cpp  pcl_nop.cpp  test_import.py
